# xgraphics

./: .clang-format  .gitignore  CMakeLists.txt
include/xgraphics/: graphics_config.h  xgraphics.h  xgraphics_backend.h
include/xgraphics/interfaces/: graphics_buffer.h  graphics_command_buffer.h  graphics_device.h  graphics_device_def.h  graphics_image.h  graphics_instance.h  graphics_pipeline.h  graphics_render_pass.h  graphics_resource_layout.h  graphics_resource_set.h  graphics_sampler.h  graphics_shader.h  graphics_swapchain.h  graphics_uniform_buffer.h
include/xgraphics/shaders/: intermediate_shader.h  shader_binary.h  shader_compiler.h  shader_data.h  shader_info.h
src/: xgraphics.cpp
src/backends/common/: xgraphics_utils.cpp  xgraphics_utils.h
src/backends/common/macos/: macos_graphics_helpers.h  macos_graphics_helpers.mm
src/backends/metal/: CMakeLists.txt  metal_buffer.h  metal_buffer.mm  metal_command_buffer.h  metal_command_buffer.mm  metal_device.h  metal_device.mm  metal_device_def.h  metal_image.h  metal_image.mm  metal_instance.h  metal_instance.mm  metal_pipeline.h  metal_pipeline.mm  metal_render_pass.h  metal_render_pass.mm  metal_resource_layout.h  metal_resource_layout.mm  metal_resource_set.h  metal_resource_set.mm  metal_sampler.h  metal_sampler.mm  metal_shader.h  metal_shader.mm  metal_swapchain.h  metal_swapchain.mm  metal_sync_context.h  metal_sync_context.mm  metal_uniform_buffer.h  metal_uniform_buffer.mm  metal_xgraphics.h  metal_xgraphics.mm
src/backends/vulkan/: CMakeLists.txt  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_device.cpp  vulkan_device.h  vulkan_device_def.h  vulkan_image.cpp  vulkan_image.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_memory_context.cpp  vulkan_memory_context.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_render_pass.cpp  vulkan_render_pass.h  vulkan_resource_layout.cpp  vulkan_resource_layout.h  vulkan_resource_set.cpp  vulkan_resource_set.h  vulkan_sampler.cpp  vulkan_sampler.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_sync_context.cpp  vulkan_sync_context.h  vulkan_uniform_buffer.cpp  vulkan_uniform_buffer.h  vulkan_utils.cpp  vulkan_utils.h  vulkan_xgraphics.cpp  vulkan_xgraphics.h
src/interfaces/: graphics_buffer.cpp  graphics_command_buffer.cpp  graphics_device.cpp  graphics_image.cpp  graphics_instance.cpp  graphics_pipeline.cpp  graphics_render_pass.cpp  graphics_resource_layout.cpp  graphics_resource_set.cpp  graphics_sampler.cpp  graphics_shader.cpp  graphics_swapchain.cpp  graphics_uniform_buffer.cpp
src/shaders/: intermediate_shader.cpp  shader_binary.cpp  shader_compiler.cpp  shader_data.cpp
src/shaders/backends/: metal_shader_compiler.cpp  vulkan_shader_compiler.cpp
